# narrator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docker/: Dockerfile  entrypoint.sh
docker/ollama/: Dockerfile
frontend/: craco.config.js  package.json  tsconfig.json
frontend/docker/: Dockerfile
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/api/: HttpAPI.ts  NarratorAPI.ts
frontend/src/campaigns/: campaigns.tsx  index.ts
frontend/src/characters/: character.tsx  characterCard.tsx  characters.tsx  form.ts  index.ts  types.ts
frontend/src/characters/state/: hooks.ts  hooks.tsx  reducer.ts  thunk.ts
frontend/src/chat/: chat.tsx
frontend/src/form/: checkboxField.tsx  textFieldForm.tsx  textareaForm.tsx
frontend/src/layout/: index.ts  narratorLayout.tsx
frontend/src/menu/: index.ts  narratorDrawer.tsx
frontend/src/modal/: createModalForm.tsx  index.ts  modal.tsx
frontend/src/pages/: characters.tsx  charactersDetails.tsx  index.ts  places.tsx  placesDetails.tsx  resources.tsx
frontend/src/places/: editPlaceModal.tsx  form.ts  index.ts  newPlaceModal.tsx  place.tsx  places.tsx  types.ts
frontend/src/places/state/: hooks.ts  hooks.tsx  reducer.ts  thunk.ts
frontend/src/redux/: store.ts  types.ts
frontend/src/redux/fetcher/: index.ts
frontend/src/resources/: editResourceModal.tsx  index.ts  newResourceModal.tsx  resources.tsx  searchableResources.tsx  types.ts
frontend/src/resources/state/: hooks.ts  hooks.tsx  reducer.ts  thunk.ts
frontend/src/router/: index.ts  narratorRouter.tsx  useCurrentRoute.ts
frontend/src/sections/: bucketSection.tsx  cardSection.tsx  index.ts  optionsSection.tsx  section.tsx  spacingContainer.tsx
frontend/src/speechToText/: SpeechToText.ts  microphone.tsx
frontend/src/textToSpeech/: TextToSpeech.ts
frontend/src/tooltip/: index.tsx  richTooltip.tsx  sectionTitleTooltip.tsx
frontend/src/types/: place.ts
narrator/: apps.py  conftest.py  constants.py  env.py  settings.py  urls.py
narrator/admin/: models.py
narrator/chatgpt/: __init__.py  chat_gpt.py  serializers.py
narrator/chatgpt/tests/: test_chat_gpt.py  test_chat_gpt_assistant.py  test_chat_gpt_thread.py
narrator/examples/: speech-to-text.py  text-to-speech.py
narrator/fixtures/: __init__.py  test_characters.py  test_resources.py
narrator/loaders/: __init__.py  csv_loader.py  file_loader.py  json_loader.py  loader.py  text_loader.py
narrator/loaders/tests/: dummy_json_broken.json  dummy_proposals.csv  dummy_proposals_broken.csv  test_csv_loader.py  test_file_loader.py  test_json_loader.py  test_text_loader.py
narrator/management/commands/: run_rq_job.py
narrator/migrations/: 0001_initial.py  0002_characterinteraction_text.py  0003_remove_character_interactions_alter_character_voice.py  0004_characterthread.py  0005_characterthread_narrator_ch_thread__42e346_idx.py  0006_campaign.py  0007_place.py  0008_alter_campaign_description_alter_place_description.py  0009_resource_specs.py  0010_rename_specs_resource_file.py  0011_place_resources.py  0012_alter_place_resources.py
narrator/models/: __init__.py  campaign.py  character.py  character_interaction.py  character_thread.py  place.py  resource.py
narrator/models/tests/: test_character.py  test_character_get_interactions.py  test_resource.py
narrator/modules/: chat_gpt_assistant_module.py  chat_gpt_message_module.py  chat_gpt_module.py  chat_gpt_thread_module.py
narrator/modules/tests/: test_chat_gpt_assistant_module.py  test_chat_gpt_message_module.py  test_chat_gpt_module.py  test_chat_gpt_thread_module.py
narrator/pipeline/: __init__.py  pipeline.py  pipeline_context.py  pipeline_module.py
narrator/pipelines/: __init__.py  conversation_pipeline.py  thread_conversation_pipeline.py
narrator/pipelines/tests/: test_conversation_pipeline.py  test_thread_conversation_pipeline.py
narrator/playground/: langchain_example.py
narrator/retrieval/: embeddings.py  index.py  vector_store.py  vector_store_model_mixin.py
narrator/serializers/: __init__.py  campaign_serializer.py  character_interaction_serializer.py  character_serializer.py  place_serializer.py  resource_serializer.py  user_serializer.py
narrator/utils/: __init__.py  dev.py  enum.py  flatten.py  singleton.py  timer_function.py
narrator/utils/tests/: test_timer_function.py
narrator/views/: __init__.py  campaign_view.py  character_interaction_view.py  character_view.py  place_view.py  resource_view.py  user_view.py
nginx/: nginx.conf
