[metadata]
name = narrator
version = 0.0.1
description = A narrator for character and world building using AI.
long_description = file: README.md
author = Nikos Atlas
author_email = nikatlas@gmail.com

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.1  # Replace "X.Y" as appropriate

[darglint]
# https://github.com/terrencepreilly/darglint
strictness = long
docstring_style = google

[flake8]
include = 'narrator/**/*.py'
max-line-length = 88
